fixing scroll and overflow bug

--- a/css/common.css
+++ b/css/common.css
@@ -30,7 +30,7 @@
 html {
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    overflow-y: scroll;
 }
 
 /* General styles for body elements */
